[chore][product colors]: update product colours

--- a/app/assets/stylesheets/redesign/_product_colours.css.scss
+++ b/app/assets/stylesheets/redesign/_product_colours.css.scss
@@ -1,4 +1,136 @@
 #product-color-content {
+
+  .custom {
+
+    .color-burgundy{
+      background-color: #690f0f;
+    }
+
+    .color-cherry-red {
+      background-color: #ba0e0e;
+    }
+
+    .color-navy{
+      background-color: #00004c;
+    }
+
+    .color-cobalt-blue{
+      background-color: #0000e5;
+    }
+
+    .color-black{
+      background-color: #000000;
+    }
+
+    .color-white {
+      background-color: #ffffff;
+    }
+
+    .color-ivory {
+      background-color: #FFFFF0;
+    }
+
+    .color-pale-pink {
+      background-color: #fff2f4;
+    }
+
+    .color-light-pink {
+      background-color: #ffecef;
+    }
+
+    .color-red {
+      background-color: #dd0000;
+    }
+
+    .color-pale-grey {
+      background-color: #e1dfdf;
+    }
+
+    .color-charcoal{
+      background-color: #3c3c3c;
+    }
+
+    .color-marine-blue {
+      background-color: #055281;
+    }
+
+    .color-pale-yellow {
+      background-color: #e3e7ba;
+    }
+
+    .color-burnt-orange {
+      background-color: #f07532;
+    }
+
+    .color-pine {
+      background-color: #128755;
+    }
+
+    .color-pale-blue {
+      background-color: #cdf1f4;
+    }
+
+    .color-ice-blue {
+      background-color: #abfdff;
+    }
+
+    .color-mint {
+      background-color: #91ffdb;
+    }
+
+    .color-champagne {
+      background-color: #f0debb;
+    }
+
+    .color-moss-green {
+      background-color: #8ea578;
+    }
+
+    .color-lavender {
+      background-color: #d9c0e7;
+    }
+
+    .color-lilac {
+      background-color: #ecddf4;
+    }
+
+    .color-coral {
+      background-color: #ff6262;
+    }
+
+    .color-magenta {
+      background-color: #e137b7;
+    }
+
+    .color-off-white {
+      background-color: #fffef6;
+    }
+
+    .color-teal {
+      background-color: #41a9ab;
+    }
+
+    .color-purple {
+      background-color: #8e54cc;
+    }
+
+    .color-blush {
+      background-color: #eec6c6;
+    }
+
+    .color-taupe {
+      background-color: #c9bba4;
+    }
+
+    .color-royal-blue {
+      background-color: #3f34b2;
+    }
+
+    .color-pale-green {
+      background-color: #d1f6d7;
+    }
+  }
+
   .recommended {
 
     .color-option {
@@ -7,6 +139,22 @@
         background-color:#CCCCCC;
         margin:0;
         padding:0;
+      }
+
+      .color-watermelon {
+        background-color: #FF3366;
+      }
+
+      .color-sand {
+        background-color: #efeadd;
+      }
+
+      .color-cotton-candy {
+        background-color: #fbbfe9;
+      }
+
+      .color-neon-mint {
+        background-color: #33ffc6;
       }
 
       .color-black {
@@ -94,7 +242,7 @@
         background-color:#BCBEBB;
       }
 
-      .color-burgandy {
+      .color-burgundy {
         background-color:#5D0201;
       }
 
@@ -114,7 +262,7 @@
         background-color:#F9E3CB;
       }
 
-      .color-navy-blue {
+      .color-navy {
         background-color:#BCBEBB;
       }
 
