[bug][product color] update navy to correct color

--- a/app/assets/stylesheets/redesign/_product_colours.css.scss
+++ b/app/assets/stylesheets/redesign/_product_colours.css.scss
@@ -263,7 +263,7 @@
       }
 
       .color-navy {
-        background-color:#BCBEBB;
+        background-color:#00004c;
       }
 
       .color-moss-green {
