--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Forum);
+@import url(//fonts.googleapis.com/css?family=Forum);
 
 @import 'redesign/vars';
 @import 'redesign/mixins';
