--- a/app/views/layouts/redesign/application.html.slim
+++ b/app/views/layouts/redesign/application.html.slim
@@ -4,7 +4,7 @@ doctype html
 
     link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/select2/4.0.0-beta.3/css/select2.min.css"
 
-    = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700'
+    = stylesheet_link_tag '//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700'
     = stylesheet_link_tag 'application_redesign'
     = javascript_include_tag 'application_redesign'
     = csrf_meta_tags
