--- a/app/assets/stylesheets/redesign/_product.css.scss
+++ b/app/assets/stylesheets/redesign/_product.css.scss
@@ -123,7 +123,7 @@ z.list-group-item.customization-option  {
 	background-color: transparent;
 }
 
-.select2, .select2-container, .select2-container--default, .selection, .select2-selection, .select2-selection--single ,.select2-selection__rendered, .select2-selection__arrow, .select2-selection__rendered, .select2-search__field{
+.select2, .select2-container, .select2-container--default, .selection, .select2-selection, .select2-selection--single ,.select2-selection__rendered, .select2-selection__arrow, .select2-selection__rendered, .select2-search__field, button, .btn{
   &:focus {
     outline:none;
   }
