[chore][product page]: add hover state to buttons

--- a/app/views/products/details/show.html.slim
+++ b/app/views/products/details/show.html.slim
@@ -279,7 +279,7 @@ hr
       h2 Customize Your Dress
 
       - @product.customization_options.each do |option|
-        .col-md-10.col-md-offset-1
+        .col-md-10.col-md-offset-1.white-background
           .row
             .image-box
               = image_tag option.image, :alt => option.name
