--- a/app/assets/stylesheets/redesign/_product.css.scss
+++ b/app/assets/stylesheets/redesign/_product.css.scss
@@ -28,6 +28,10 @@ z.list-group-item.customization-option  {
   .btn-secondary {
     height: 45px;
     padding: 0;
+
+    &:hover {
+      background-color: #355e6d;
+    }
   }
 
   .secondary-actions .col-md-6:last-child {
@@ -545,8 +549,11 @@ z.list-group-item.customization-option  {
     padding-top: 10px;
   }
 
-  .col-md-10 {
+  .col-md-10.white-background {
     background-color: white;
+  }
+
+  .col-md-10 {
     margin-bottom: 40px;
   }
 
@@ -579,5 +586,20 @@ z.list-group-item.customization-option  {
 	.btn-black.customization-option {
 		background-color: #000000;
 	}
+}
 
+.btn-black:hover {
+  background-color: #333333;
+}
+
+.btn-fit-guide:hover {
+  background-color: #355e6d;
+}
+
+.customization-option:hover {
+  background-color: #355e6d !important;
+}
+
+.btn-clear-customizations:hover {
+  background-color: #333333 !important;
 }
