--- a/app/assets/stylesheets/redesign/style_quiz/_base.css.scss
+++ b/app/assets/stylesheets/redesign/style_quiz/_base.css.scss
@@ -73,6 +73,7 @@ label {
 // Section
 .quiz-section {
   margin-bottom: 80px;
+  overflow-x: hidden;
 }
 .quiz-section-title {
   padding: 85px 0;
@@ -134,4 +135,30 @@ label {
   }
 }
 // @end Catalog
+// -----------------
+
+// Rank boxes
+.rank-box {
+  font-size: 0;
+  direction: rtl;
+  text-align: center;
+} 
+.rank-cell {
+  display: inline-block;
+  vertical-align: bottom;
+  width: 10%;
+}
+.rank-item {
+  width: 100%;
+  cursor: pointer;
+  height: 0;
+}
+.rank-box .rank-cell {
+  &:hover, &.active {
+    .rank-item, & ~ .rank-cell .rank-item {
+      background-position: 0 100%;
+    }
+  }
+}
+// @end Rank boxes
 // -----------------
