--- a/app/assets/stylesheets/redesign/style_quiz/_sections.css.scss
+++ b/app/assets/stylesheets/redesign/style_quiz/_sections.css.scss
@@ -69,6 +69,142 @@
 // @end Question 4
 // -----------------
 
+// Question 8 
+.rank-fasion {
+  margin: -40px 0 50px 0;
+  .rank-cell { 
+    max-width: 112px;
+  }
+}
+.rank-fasion-item-0 {
+  background: url('_style_quiz/rank-fasion-0.png') no-repeat;
+  background-size: cover;
+  padding-bottom: percentage((57 / 112));
+  margin-bottom: -26px;
+}
+.rank-fasion-item-1 {
+  background: url('_style_quiz/rank-fasion-1.png') no-repeat;
+  background-size: cover;
+  padding-bottom: percentage((19 / 112));
+}
+.rank-fasion-item-2 {
+  background: url('_style_quiz/rank-fasion-2.png') no-repeat;
+  background-size: cover;
+  padding-bottom: percentage((35 / 112));
+}
+.rank-fasion-item-3 {
+  background: url('_style_quiz/rank-fasion-3.png') no-repeat;
+  background-size: cover;
+  padding-bottom: percentage((56 / 112));
+}
+.rank-fasion-item-4 {
+  background: url('_style_quiz/rank-fasion-4.png') no-repeat;
+  background-size: cover;
+  padding-bottom: percentage((84 / 112));
+}
+.rank-fasion-item-5 {
+  background: url('_style_quiz/rank-fasion-5.png') no-repeat;
+  background-size: cover;
+  padding-bottom: percentage((119 / 112));
+  // padding-bottom: 106.3%; // fix
+}
+.rank-fasion-item-6 {
+  background: url('_style_quiz/rank-fasion-6.png') no-repeat;
+  background-size: cover;
+  padding-bottom: percentage((164 / 112));
+}
+.rank-fasion-item-7 {
+  background: url('_style_quiz/rank-fasion-7.png') no-repeat;
+  background-size: cover;
+  padding-bottom: percentage((220 / 112));
+}
+.rank-fasion-item-8 {
+  background: url('_style_quiz/rank-fasion-8.png') no-repeat;
+  background-size: cover;
+  padding-bottom: percentage((293 / 112));
+}
+.rank-fasion-item-9 {
+  background: url('_style_quiz/rank-fasion-9.png') no-repeat;
+  background-size: cover;
+  padding-bottom: percentage((387 / 112));
+  position: relative;
+  &:after {
+    content: '';
+    width: 102px;
+    height: 79px;
+    bottom: 100%;
+    right: -47px;
+    margin-bottom: -1px;
+    position: absolute;
+    background: url('_style_quiz/rank-fasion-arrow.png') no-repeat;
+    background-size: cover;
+    z-index: 2;
+  }
+  &:hover:after,
+  .active &:after {
+    background-position: 0 100%;
+  }
+}
+// @end Question 8
+// -----------------
+
+// Question 9
+.rank-sexy .rank-cell { 
+  max-width: 117px;
+}
+.rank-sexy-item-0 {
+  background: url('_style_quiz/rank-sexy-0.png') no-repeat;
+  background-size: cover;
+  padding-bottom: percentage((61 / 117));
+}
+.rank-sexy-item-1 {
+  background: url('_style_quiz/rank-sexy-1.png') no-repeat;
+  background-size: cover;
+  padding-bottom: percentage((61 / 117));
+}
+.rank-sexy-item-2 {
+  background: url('_style_quiz/rank-sexy-2.png') no-repeat;
+  background-size: cover;
+  padding-bottom: percentage((123 / 117));
+}
+.rank-sexy-item-3 {
+  background: url('_style_quiz/rank-sexy-3.png') no-repeat;
+  background-size: cover;
+  padding-bottom: percentage((123 / 117));
+}
+.rank-sexy-item-4 {
+  background: url('_style_quiz/rank-sexy-4.png') no-repeat;
+  background-size: cover;
+  padding-bottom: percentage((184 / 117));
+}
+.rank-sexy-item-5 {
+  background: url('_style_quiz/rank-sexy-5.png') no-repeat;
+  background-size: cover;
+  padding-bottom: percentage((184 / 117));
+}
+.rank-sexy-item-6 {
+  background: url('_style_quiz/rank-sexy-6.png') no-repeat;
+  background-size: cover;
+  padding-bottom: percentage((245 / 117));
+}
+.rank-sexy-item-7 {
+  background: url('_style_quiz/rank-sexy-7.png') no-repeat;
+  background-size: cover;
+  padding-bottom: percentage((245 / 117));
+}
+.rank-sexy-item-8 {
+  background: url('_style_quiz/rank-sexy-8.png') no-repeat;
+  background-size: cover;
+  padding-bottom: percentage((307 / 117));
+}
+.rank-sexy-item-9 {
+  background: url('_style_quiz/rank-sexy-9.png') no-repeat;
+  background-size: cover;
+  padding-bottom: percentage((307 / 117));
+}
+// @end Question 9
+// -----------------
+
 // Question 10 
 .event-tag {
   position: relative;
