--- a/app/views/layouts/redesign/style_quiz.html.slim
+++ b/app/views/layouts/redesign/style_quiz.html.slim
@@ -5,7 +5,7 @@ doctype html
     = stylesheet_link_tag 'application_quiz'
     = csrf_meta_tags
     
-    / = javascript_include_tag 'application_redesign'
+    = javascript_include_tag 'application_quiz'
     script src="//use.typekit.net/kur6crm.js" type="text/javascript"
     script type="text/javascript"
       | try{Typekit.load();}catch(e){}
