[bug][product colors]: add final colour

--- a/app/assets/stylesheets/redesign/_product_colours.css.scss
+++ b/app/assets/stylesheets/redesign/_product_colours.css.scss
@@ -178,6 +178,9 @@
         background-color: #ffae19;
       }
 
+      .color-turquoise {
+        background-color: #34DDDD;
+      }
     }
   }
 
