--- a/app/views/products/details/show.html.slim
+++ b/app/views/products/details/show.html.slim
@@ -264,10 +264,10 @@ hr
     .row
       .col-md-12.custom
         h2=  "Custom Colors +#{@product.custom_color_price}"
+        
         - @product.custom_color_options.each_slice(2) do |colors|
-          .row
             - colors.each do |color|
-              .col-md-6.col-xs-6.col-xxs-12
+              .col-md-6
                 a.color-option.product-option href="#" data-id=color.id data-custom="true" data-name=color.presentation data-price=@product.custom_color_price
                   span.option-box.color-box class="color-#{color.name}"
                   span.option-name= color.presentation
