--- a/app/assets/stylesheets/redesign/_login.css.scss
+++ b/app/assets/stylesheets/redesign/_login.css.scss
@@ -17,11 +17,6 @@
 
 .login.new, .sign-up.new, .password-new {
 
-  @media(max-width: 768px){
-    margin-left: 2rem;
-    margin-right: 2rem;
-  }
-
   .low-btn {
     font-size: 1rem;
     line-height: 1rem;
@@ -42,4 +37,7 @@
     margin-top: 6px;
   }
 
+  .col-md-12.form-group {
+    padding-right: 0;
+  }
 }
