--- a/app/views/spree/shared/_login.html.slim
+++ b/app/views/spree/shared/_login.html.slim
@@ -6,15 +6,15 @@
       = render :partial =>'shared/redesign/flash_messages', flash: flash
 
       .row
-        .col-md-12.form-group
+        .col-md-12.col-sm-12.form-group
           = f.label :email
           = f.email_field :email, class: 'title', tabindex: 1, :class => 'form-control form-control-md'
       .row
-        .col-md-12.form-group
+        .col-md-12.col-sm-12.form-group
           = f.label :password
           = f.password_field :password, class: 'title', tabindex: 2, :class => 'form-control form-control-md'
       .row
-        .col-md-12.form-group
+        .col-md-12.col-sm-12.form-group
           .checkbox
             label for="spree_user_remember_me"
               = f.check_box :remember_me
