[feat][js] Move js to bottom of document

--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -10,6 +10,7 @@
 @import 'stylesheets/styleguide.css';
 @import 'stylesheets/styles.css';
 
+@import 'libs/select2.min.css';
 @import 'libs/vex.css';
 @import 'libs/vex-theme-flat-attack.css';
 @import 'libs/vex-theme-bottom-right-corner.css';
