--- a/app/views/layouts/redesign/_shopping_bag.html.slim
+++ b/app/views/layouts/redesign/_shopping_bag.html.slim
@@ -28,7 +28,7 @@ ruby:
       ul.cart-items
         - @cart.products.each do |product|
           li
-            = image_tag product.image.small, class: 'img-responsive pull-left cart-item-image'
+            = image_tag product.image.large, class: 'img-responsive pull-left cart-item-image'
             a.fa.fa-close.pull-right.link-grey.remove-product href="#0" 
             span.qty = "#{ product.quantity}x"
             = product.name
