--- a/app/views/spree/orders/_summary.html.slim
+++ b/app/views/spree/orders/_summary.html.slim
@@ -5,7 +5,7 @@
   ul.cart-items
     - (cart.products || []).each do |product|
       li
-        = image_tag product.image.small, class: 'img-responsive pull-left cart-item-image'
+        = image_tag product.image.large, class: 'img-responsive pull-left cart-item-image'
         .cart-item--details.pull-left
           span.qty = "#{ product.quantity}x"
           = product.name
