--- a/app/assets/stylesheets/redesign/_modal.css.scss
+++ b/app/assets/stylesheets/redesign/_modal.css.scss
@@ -171,8 +171,6 @@
 }
 
 
-
-
 .vex-theme-flat-attack.email-capture-modal.teen-vogue-2015 {
   .vex-content {
     background-color:#EEDDF0;
@@ -185,7 +183,7 @@
 
   .vex-dialog-form {
     .vex-dialog-input {
-      margin-top: 80px;
+      margin-top: 35px;
 
       .standard-form  {
         height: 35px;
@@ -201,7 +199,8 @@
     font-size:1.222222em;
     font-family:"brandon-grotesque";
     font-weight:400;
-    margin-top:85px
+    margin-top:85px;
+    line-height: 1.5;
   }
 
   p {
@@ -210,6 +209,7 @@
     color:black;
     font-weight:500;
     font-family:Forum;
+    line-height: 5rem;
   }
 
   .btn.submit {
