--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -122,6 +122,7 @@ h1.edit-title {
 
 .cd-top {
   background: rgba(0, 0, 0, 0.8) url(top.png) no-repeat center 50%;
+  display: none;
 }
 
 .zopim {
