[bug][product colors]: bug fix for blush colour

--- a/app/assets/stylesheets/redesign/_product_colours.css.scss
+++ b/app/assets/stylesheets/redesign/_product_colours.css.scss
@@ -443,6 +443,10 @@
         background-color:#826a77;
       }
 
+      .color-blush {
+        background-color: #eec6c6;
+      }
+
       .color-blue-azalea-floral {
         background-image:url('product-color-images/blue_floral.jpg');
         background-size: cover;
