--- a/app/views/layouts/redesign/_mobile_menu.html.slim
+++ b/app/views/layouts/redesign/_mobile_menu.html.slim
@@ -1,69 +1,69 @@
-a.cd-top href='#top' Top
-
-/! Mobile Menu
-/ .mobile-menu-overlay
-/ .close-mobile.pull-right
-/ = image_tag 'images/close.svg', alt: 'X'
-#mobile-style.mobile-menu-options.hidden
-  .text-center
-    h3 Styles
-    ul.list-group
-      = link_to 'Two-Piece', build_taxon_path('Two Piece'), class: 'list-group-item', title: "Two-Piece Dresses"
-      = link_to 'One Shoulder', build_taxon_path('One-Shoulder'), class: 'list-group-item', title: "One Shoulder Dresses"
-      = link_to 'Strapless', build_taxon_path('Strapless'), class: 'list-group-item', title: "Strapless Dresses"
-      = link_to 'V-Neck', build_taxon_path('V-Neck'), class: 'list-group-item', title: "V-Neck Dresses"
-      = link_to 'Split', build_taxon_path('Split'), class: 'list-group-item', title: "Split Dresses"
-      = link_to 'Backless', build_taxon_path('Open-Back'), class: 'list-group-item', title: "Open Back Dresses"
-      = link_to 'Lace', build_taxon_path('Lace'), class: 'list-group-item', title: "Lace Dresses"
-
-#mobile-color.mobile-menu-options.hidden
-  .text-center
-    h3 Colors
-    ul.list-group
-      = link_to "Black Dresses", colour_path('Black'), class: 'list-group-item', title: "Black Dresses"
-      = link_to "White / Ivory Dresses", colour_path('White'), class: 'list-group-item', title: "White / Ivory Dresses"
-      = link_to "Blue Dresses", colour_path('Blue'), class: 'list-group-item', title: "Blue Dresses"
-      = link_to "Pink Dresses", colour_path('Pink'), class: 'list-group-item', title: "Pink Dresses"
-      = link_to "Red Dresses", colour_path('Red'), class: 'list-group-item', title: "Red Dresses"
-      = link_to "Pastel Dresses", colour_path('Pastel'), class: 'list-group-item', title: "Pastel Dresses"
-
-#mobile-event.mobile-menu-options.hidden
-  .text-center
-    h3 Events
-    ul.list-group
-      = link_to 'Prom Dresses', build_taxon_path('Prom'), class: 'list-group-item', title: 'Prom Dresses'
-      = link_to 'Bridesmaid Dresses', bridesmaid_lp_path, class: 'list-group-item', title: 'Bridesmaid Dresses'
-      = link_to 'Formal Dresses', build_taxon_path('Formal'), class: 'list-group-item', title: 'Formal Dresses'
-      a.list-group-item href="/dresses/wedding" Wedding Dresses
-      a.list-group-item href="/dresses/homecoming" Homecoming Dresses
-      a.list-group-item href="/dresses/ball" Ball Dresses
-      a.list-group-item href="/dresses/sweet-16" Sweet 16 Dresses
-      a.list-group-item href="/dresses/birthday" Birthday Dresses
-      a.list-group-item href="/dresses/debutante" Debutante Dresses
-      a.list-group-item href="/dresses/graduation" Graduation Dresses
-      a.list-group-item href="/dresses/special-events" Special Event Dresses
-
-
-/! Mobile Menu
-#mobile-menu.mobile-menu.visible-sm.visible-xs
-  .row
-    .col-xs-3.mobile-menu-icon.mobile-active
-      a href="/dresses"
-        span.hidden-xxs
-        | View All
-    .col-xs-3.mobile-menu-icon.style
-      a href="#" data-menu-options-container='#mobile-style'
-        span.hidden-xs
-        | By Style
-    .col-xs-3.mobile-menu-icon.color
-      a href="#" data-menu-options-container='#mobile-color'
-        span.hidden-xs
-        | By Color
-    .col-xs-3.mobile-menu-icon.event
-      a href="#" data-menu-options-container='#mobile-event'
-        span.hidden-xs
-        | By Event
-
-
 = content_for :inline_javascript do
   | new window.page.MobileMenu({container: '#mobile-menu'});
+
+- cache [:layout, :mobile_menu], expires_in: configatron.cache.expire.long do
+  a.cd-top href='#top' Top
+
+  /! Mobile Menu
+  / .mobile-menu-overlay
+  / .close-mobile.pull-right
+  / = image_tag 'images/close.svg', alt: 'X'
+  #mobile-style.mobile-menu-options.hidden
+    .text-center
+      h3 Styles
+      ul.list-group
+        = link_to 'Two-Piece', build_taxon_path('Two Piece'), class: 'list-group-item', title: "Two-Piece Dresses"
+        = link_to 'One Shoulder', build_taxon_path('One-Shoulder'), class: 'list-group-item', title: "One Shoulder Dresses"
+        = link_to 'Strapless', build_taxon_path('Strapless'), class: 'list-group-item', title: "Strapless Dresses"
+        = link_to 'V-Neck', build_taxon_path('V-Neck'), class: 'list-group-item', title: "V-Neck Dresses"
+        = link_to 'Split', build_taxon_path('Split'), class: 'list-group-item', title: "Split Dresses"
+        = link_to 'Backless', build_taxon_path('Open-Back'), class: 'list-group-item', title: "Open Back Dresses"
+        = link_to 'Lace', build_taxon_path('Lace'), class: 'list-group-item', title: "Lace Dresses"
+
+  #mobile-color.mobile-menu-options.hidden
+    .text-center
+      h3 Colors
+      ul.list-group
+        = link_to "Black Dresses", colour_path('Black'), class: 'list-group-item', title: "Black Dresses"
+        = link_to "White / Ivory Dresses", colour_path('White'), class: 'list-group-item', title: "White / Ivory Dresses"
+        = link_to "Blue Dresses", colour_path('Blue'), class: 'list-group-item', title: "Blue Dresses"
+        = link_to "Pink Dresses", colour_path('Pink'), class: 'list-group-item', title: "Pink Dresses"
+        = link_to "Red Dresses", colour_path('Red'), class: 'list-group-item', title: "Red Dresses"
+        = link_to "Pastel Dresses", colour_path('Pastel'), class: 'list-group-item', title: "Pastel Dresses"
+
+  #mobile-event.mobile-menu-options.hidden
+    .text-center
+      h3 Events
+      ul.list-group
+        = link_to 'Prom Dresses', build_taxon_path('Prom'), class: 'list-group-item', title: 'Prom Dresses'
+        = link_to 'Bridesmaid Dresses', bridesmaid_lp_path, class: 'list-group-item', title: 'Bridesmaid Dresses'
+        = link_to 'Formal Dresses', build_taxon_path('Formal'), class: 'list-group-item', title: 'Formal Dresses'
+        a.list-group-item href="/dresses/wedding" Wedding Dresses
+        a.list-group-item href="/dresses/homecoming" Homecoming Dresses
+        a.list-group-item href="/dresses/ball" Ball Dresses
+        a.list-group-item href="/dresses/sweet-16" Sweet 16 Dresses
+        a.list-group-item href="/dresses/birthday" Birthday Dresses
+        a.list-group-item href="/dresses/debutante" Debutante Dresses
+        a.list-group-item href="/dresses/graduation" Graduation Dresses
+        a.list-group-item href="/dresses/special-events" Special Event Dresses
+
+
+  /! Mobile Menu
+  #mobile-menu.mobile-menu.visible-sm.visible-xs
+    .row
+      .col-xs-3.mobile-menu-icon.mobile-active
+        a href="/dresses"
+          span.hidden-xxs
+          | View All
+      .col-xs-3.mobile-menu-icon.style
+        a href="#" data-menu-options-container='#mobile-style'
+          span.hidden-xs
+          | By Style
+      .col-xs-3.mobile-menu-icon.color
+        a href="#" data-menu-options-container='#mobile-color'
+          span.hidden-xs
+          | By Color
+      .col-xs-3.mobile-menu-icon.event
+        a href="#" data-menu-options-container='#mobile-event'
+          span.hidden-xs
+          | By Event
