--- a/app/views/products/search_results/show.html.slim
+++ b/app/views/products/search_results/show.html.slim
@@ -21,7 +21,12 @@ ruby:
 .page-title.default style="background-color:#EDDCEF;"
   .container
     .page-title--details
-      h1.no-padding-bottom Search
+      - if @search_collection.any?
+        h1.no-padding-bottom Hey!
+        p We found the stuff you were looking for.
+      -else
+        h1.no-padding-bottom Sorry
+        p We couldn't find the stuff you were looking for.
 
 .page-content.products-collections.category
   .container.relative.products-collection
@@ -31,9 +36,9 @@ ruby:
           | You need to search for something
 
     - else
-      - if @search_collection.total_products.to_i == 0
+      - if @search_collection.none?
         .row.relative
-          .col.col-md-12= "We couldn't find any dresses like #{ @search_collection.query_string }"
+          .col.col-md-12= "We couldn't find any dresses like '#{ @search_collection.query_string }'"
 
       - @search_collection.products.each_slice(4) do |products|
         .row.relative
