--- a/app/views/index/show.html.slim
+++ b/app/views/index/show.html.slim
@@ -7,7 +7,7 @@
         .container.height-100
           .promotion
             h2.caption-title have a taste of fame.
-            p dresses made and styled for you by fame &amp; partners
+            p dresses made and styled for you
             button.btn.taste-of-fame-btn type="button"  shop now
 
     div.prom.slider-action data-href="/prom"
