[fix][titles]: fix background colour on some titles

--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -131,6 +131,10 @@ h1.edit-title {
   }
 }
 
+.page-title {
+  background-color: #eeddf0;
+}
+
 /*
   // added for quick reference only
   <link rel="stylesheet" href="stylesheets/styles.css">
