[fix][FAQS] fix header colour

--- a/app/views/statics/faqs.html.slim
+++ b/app/views/statics/faqs.html.slim
@@ -1,7 +1,7 @@
 .page-title.default
   .container
     .page-title--details
-      h1.no-padding-bottom.text-white Frequently Asked Questions
+      h1.no-padding-bottom Frequently Asked Questions
 
 .page-content.faq
   .container.relative
