[fix][mobile all dresses]: fix overflow on mobile

--- a/app/assets/stylesheets/redesign/_products_collections.css.scss
+++ b/app/assets/stylesheets/redesign/_products_collections.css.scss
@@ -105,6 +105,11 @@
 		margin-right: auto;
 		padding-top: 160px;
 		font-family: "brandon-grotesque", sans-serif;
+
+		@media(max-width: 490px){
+			max-width: 100%;
+			padding-top: 100px;
+		}
 	}
 
 	&.dark-bg {
