markup signup dialog

--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -18,6 +18,8 @@
 
 @import 'redesign/extras/tabs';
 
+@import 'redesign/icons';
+
 @import 'redesign/layout';
 @import 'redesign/header';
 @import 'redesign/footer';
