--- a/app/assets/stylesheets/redesign/_forms.css.scss
+++ b/app/assets/stylesheets/redesign/_forms.css.scss
@@ -47,6 +47,9 @@
   padding-top: 9px;
   padding-bottom: 9px;
   min-height: $form-control-height-md;
+  &.btn-white {
+    font-size: inherit;
+  }
 }
 // - facebook
 .btn-facebook {
