--- a/app/assets/stylesheets/redesign/_modal.css.scss
+++ b/app/assets/stylesheets/redesign/_modal.css.scss
@@ -1,3 +1,63 @@
+// Default layout
+.vex-dialog-default {
+
+  // - layout
+  text-align: center;
+  &:before {
+    content: '';
+    display: inline-block;
+    vertical-align: middle;
+    height: 100%;
+    width: 1px;
+    margin-left: -1px;
+  }
+  .vex-overlay { 
+    background-color: rgba(255, 255, 255, 0.4);
+  }
+  .vex-content {
+    text-align: left;
+    display: inline-block;
+    vertical-align: middle;
+    position: relative;
+    padding: 30px;
+    border: solid 1px #000;
+  }
+  .vex-close {
+    @extend .icon-cross;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+  }
+}
+
+// - colors
+.vex-dialog-pink .vex-content {
+  background-color: $pink-bg;
+}
+// @end Default layout
+// -----------------
+
+// Sign Up dialog 
+.vex-dialog-signup {
+  .vex-content {
+    max-width: 570px;
+    text-align: center;
+    padding: 50px 60px;
+    text-transform: uppercase;
+  }
+  h1 {
+    text-transform: none;
+  }
+  p + p {
+    margin-top: 20px;
+  }
+  a:not(.btn) {
+    color: #000;
+  }
+}
+// @end Sign Up dialog
+// -----------------
+
 .vex-theme-flat-attack.email-capture-modal {
 
   padding-top:13%;
