--- a/app/views/layouts/redesign/_footer.html.slim
+++ b/app/views/layouts/redesign/_footer.html.slim
@@ -57,3 +57,19 @@
           / span class='st_twitter_custom' st_via="fameandpartners" displayText='Tweet'
           = link_to configatron.links.twitter, target: :blank, class: 'twitter' do
             = image_tag '_icons/twitter.png'
+
+/ .hide
+/   #vex-popup
+/     h1 Discover your style profile and get $20 to spend on a dress.
+/     p TAKE OUR STYLE QUIZ TO GET ACCESS TO YOUR OWN PERSONALISED STYLE BOUTIQUE.
+/     p = link_to 'SIGN UP WITH YOUR EMAIL ADDRESS', '#', class: 'btn btn-block btn-white btn-md'
+/     p or
+/     p = link_to 'Sign UP USING Facebook', '#', class: 'btn btn-block btn-facebook btn-md'
+/     p 
+/       ' ALREADY A MEMBER? 
+/       = link_to 'LOG IN HERE', '#'
+/ coffee:
+/   $ ->
+/     vex.open
+/       className: 'vex-dialog-default vex-dialog-pink vex-dialog-signup'
+/       content: $('#vex-popup')
