--- a/app/views/statics/prom_lp.html.slim
+++ b/app/views/statics/prom_lp.html.slim
@@ -1,8 +1,8 @@
 /! Thursday April 2 2015 TTL: 6 months
 ruby:
-  url = '//therealprom.herokuapp.com'#{params[:snapchat]}
+  url = "http://therealprom.herokuapp.com#{"?snapchat" if params[:snapchat]}"
 
 .page-content
   .row
     .col-md-12
-      iframe src="#{url}" frameborder="0" style="width: 100%;  height: 700px;"
+      iframe src="#{url}" frameborder="0" style="width: 100%;  min-height: 700px; height: 1200px;"
