[feat][modals] glam.com modal styles

--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -48,6 +48,9 @@
 @import 'redesign/checkout';
 @import 'redesign/cart';
 
+// Time specific content
+@import 'transient_content';
+
 .mobile-logo {
   margin-top:-3px;
 }
