--- a/app/assets/stylesheets/redesign/_modal.css.scss
+++ b/app/assets/stylesheets/redesign/_modal.css.scss
@@ -83,7 +83,7 @@
   }
 
   button {
-    font-family: "brandon-grotesque", sans-serif;
+    font-family: $font-family-secondary;
   }
 
   ::-webkit-input-placeholder {
