--- a/app/assets/stylesheets/redesign/_vars.css.scss
+++ b/app/assets/stylesheets/redesign/_vars.css.scss
@@ -6,6 +6,7 @@ $pink-bg: #eeddf0;
 
 // Fonts
 $font-family-secondary: 'brandon-grotesque', sans-serif;
+$font-brand-serif: Forum, serif;
 // @end Fonts
 
 // Form
