--- a/app/assets/stylesheets/redesign/_modal.css.scss
+++ b/app/assets/stylesheets/redesign/_modal.css.scss
@@ -31,8 +31,17 @@
         display:none;
       }
 
+
       .btn {
-        padding:10px 15px;
+        background-image: url('modal-close.png');
+        background-repeat: no-repeat;
+        color: transparent;
+        background-size: cover;
+        height: 28px;
+        width:28px;
+        margin:0;
+        padding:0;
+        margin-right: 7px;
       }
     }
   }
@@ -173,48 +182,48 @@
 
 .vex-theme-flat-attack.email-capture-modal.teen-vogue-2015 {
   .vex-content {
-    background-color:#EEDDF0;
-    background: url('campaigns/teenvogue/teen_vogue_modal_bg.png') no-repeat;
-    border: none;
-    height: 407px;
-    text-transform:uppercase;
-    border:4px solid black;
+    background-color: #EEDDF0;
+    background:       url('campaigns/teenvogue/teen_vogue_modal_bg.png') no-repeat;
+    border:           none;
+    height:           407px;
+    text-transform:   uppercase;
+    border:           4px solid black;
   }
 
   .vex-dialog-form {
     .vex-dialog-input {
       margin-top: 35px;
 
-      .standard-form  {
-        height: 35px;
-        margin-bottom:15px;
+      .standard-form {
+        height:        35px;
+        margin-bottom: 15px;
       }
     }
   }
 
   h2 {
-    background:none;;
-    color:black;
-    text-align:center;
-    font-size:1.222222em;
-    font-family:"brandon-grotesque";
-    font-weight:400;
-    margin-top:85px;
+    background:  none;;
+    color:       black;
+    text-align:  center;
+    font-size:   1.222222em;
+    font-family: "brandon-grotesque";
+    font-weight: 400;
+    margin-top:  85px;
     line-height: 1.5;
   }
 
   p {
-    font-size:2.7em;
-    text-align:center;
-    color:black;
-    font-weight:500;
-    font-family:Forum;
+    font-size:   2.7em;
+    text-align:  center;
+    color:       black;
+    font-weight: 500;
+    font-family: Forum;
     line-height: 5rem;
   }
 
   .btn.submit {
-    background-color:black;
-    color:white;
+    background-color: black;
+    color:            white;
   }
 
   button {
@@ -222,46 +231,37 @@
   }
 
   ::-webkit-input-placeholder {
-     font-size: 15px;
-     text-transform: uppercase;
-     text-align: center;
+    font-size:      15px;
+    text-transform: uppercase;
+    text-align:     center;
 
   }
 
-  :-moz-placeholder { /* Firefox 18- */
-     font-size: 15px;
-     text-transform: uppercase;
-     text-align: center;
-     color:#D3D3D3;
+  :-moz-placeholder {
+    /* Firefox 18- */
+    font-size:      15px;
+    text-transform: uppercase;
+    text-align:     center;
+    color:          #D3D3D3;
   }
 
-  ::-moz-placeholder {  /* Firefox 19+ */
-     font-size: 15px;
-     text-transform: uppercase;
-     text-align: center;
-     color:#D3D3D3;
+  ::-moz-placeholder {
+    /* Firefox 19+ */
+    font-size:      15px;
+    text-transform: uppercase;
+    text-align:     center;
+    color:          #D3D3D3;
   }
 
   :-ms-input-placeholder {
-     font-size: 15px;
-     text-transform: uppercase;
-     text-align: center;
-     color:#D3D3D3;
+    font-size:      15px;
+    text-transform: uppercase;
+    text-align:     center;
+    color:          #D3D3D3;
   }
 
   .vex-dialog-input input[type="email"] {
     border: 1px solid black;
   }
 
-}
-
-.vex-theme-flat-attack .vex-content .vex-dialog-buttons .btn {
-  background-image: url('modal-close.png');
-  background-repeat: no-repeat;
-  color: transparent;
-  background-size: cover;
-  height: 40px;
-  margin-right: 10px;
-  margin-top: 5px;
-  padding: 10px 24px 10px 15px !important;
 }
