[ref][css] replace hard coded fonts with scss vars

--- a/app/assets/stylesheets/redesign/_cart.css.scss
+++ b/app/assets/stylesheets/redesign/_cart.css.scss
@@ -2,6 +2,6 @@
 
   .btn {
     padding: 10px 12px 6px 12px;
-    font-family: "brandon-grotesque", sans-serif;
+    font-family: $font-family-secondary;
   }
 }
