--- a/app/assets/stylesheets/redesign/_fame_chain.css.scss
+++ b/app/assets/stylesheets/redesign/_fame_chain.css.scss
@@ -130,7 +130,7 @@
 		}
 		.submit .btn {
 			width: 85%;
-			font-family: "brandon-grotesque";
+			font-family: $font-family-secondary;
 			font-size: 2.5rem;
 			padding: 0 15px;
 			margin-bottom: 5rem;
