--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -12,7 +12,7 @@
 	padding-right: 0;
 
 	.btn{
-		font-family: "brandon-grotesque";
+		font-family: $font-family-secondary;
 		width: 100%;
 		padding-left: 0;
 		padding-right: 0;
@@ -27,7 +27,7 @@
 .mega-menu-list {
 	padding-top: 10px;
 	padding-bottom: 5px;
-	font-family: "brandon-grotesque";
+	font-family: $font-family-secondary;
 	font-size: 1.6rem;
 }
 
