--- a/app/assets/stylesheets/redesign/_registration.css.scss
+++ b/app/assets/stylesheets/redesign/_registration.css.scss
@@ -2,7 +2,7 @@
 
 	font-size:2em;
 	font-style:italic;
-	font-family: "brandon-grotesque";
+	font-family: $font-family-secondary;
 	position: relative;
 	display:inline-block;
 	margin:20px 0 20px 0;
