--- a/app/assets/stylesheets/redesign/_typography.css.scss
+++ b/app/assets/stylesheets/redesign/_typography.css.scss
@@ -1,5 +1,5 @@
 h1 {
-  font-family: "brandon-grotesque";
+  font-family: $font-family-secondary;
   font-size: 5rem;
   letter-spacing: -1px;
   }
@@ -11,7 +11,7 @@ h3 {
 p {
 	color: black;
 	font-weight: 500;
-	font-family: "brandon-grotesque";
+	font-family: $font-family-secondary;
 }
 
 sup {
