--- a/app/assets/stylesheets/redesign/_modal.css.scss
+++ b/app/assets/stylesheets/redesign/_modal.css.scss
@@ -227,7 +227,7 @@
   }
 
   button {
-    font-family: $font-family-secondary
+    font-family: $font-family-secondary;
   }
 
   ::-webkit-input-placeholder {
